--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 .App {
   height: 100vh;
-  background: radial-gradient(circle, rgba(238,174,202,1) 0%, rgba(148,187,233,1) 100%);
+  background: radial-gradient(circle, rgba(238, 174, 202, 1) 0%, rgba(148, 187, 233, 1) 100%);
   display: flex;
-    justify-content: center;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .App-logo {
@@ -43,10 +43,14 @@
 
 .card {
   background-color: azure;
-  padding: 4rem;
+  padding: 3.5rem;
   border-radius: 1em;
-  
 }
+
 .card .submit-btn {
   text-align: center;
+}
+
+.card .submit-btn button {
+  padding: .5em 1.5em;
 }
